# Semi-Autonomous-Robot-Device

./: CnnModelTest.py  GetCameraVideo.py  README.md  VideoToImage.cpp  camera.cpp  camera.py  cnn.py  mainclient.py  not.txt  raspivid.txt  server.txt  server2  server_temp.py  servercontrol  sourceComputer.py  targetComputer.py  uiclient.py
Client/: Client.cpp  Client.py  CnnModelTest.py  Command.py  IP.txt  Main.py  Makefile  RobotGui  RobotGui.pro  camera.py  classes.names  dene_client.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.py  moc_mainwindow.cpp  point.txt  shape.h5  ui_client.py  ui_mainwindow.h
Client/Mapping/remoteCenter/: CMakeLists.txt
ClientTest/: Client.cpp  Main
Mapping/remoteCenter/: QSFMLCanvas.h  remote_control_center_mapping.cpp
Mapping/remoteCenterPython/: remote_control_center.py
Mapping/robot/: CMakeLists.txt  robot_lidar.cpp
RobotGui/: RobotGui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Semi-Autonomous-Robot-Device-client-14.07-15.35-/Client/: Command.py  Main.py  classes.names  point.txt  server_temp.py  ui_client.py
Semi-Autonomous-Robot-Device-client-14.07-15.35-/Mapping/robot/: robot_lidar.cpp
Semi-Autonomous-Robot-Device-client-14.07-15.35-copy/Client/: IP.txt  Main.py  server_temp.py  ui_client.py
Semi-Autonomous-Robot-Device-client-14.07-15.35-copy/Client/Mapping/remoteCenter/: remote_control_center_mapping.cpp
Semi-Autonomous-Robot-Device-client-14.07-15.35-copy/Mapping/remoteCenter/: CMakeLists.txt
Semi-Autonomous-Robot-Device-client-14.07-15.35-copy/Mapping/remoteCenterPython/: remote_control_center.py
Server/: Command.h  Command.py  Control.cpp  Control.py  Makefile  PCA9685.h  PID.h  RobotGui  RobotGui.pro  Server.h  Server.py  Servo.cpp  Servo.py  Thread.cpp  djkstra.py  main.cpp  main.py  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  point.txt  program  raspinfo.txt  readme  ui_mainwindow.h  ui_server.h
Server/Mapping/remoteCenter/: remote_control_center_mapping.cpp
Server/Mapping/remoteCenterPython/: remote_control_center.py
Server/Mapping/robot/: CMakeLists.txt  robot_lidar.cpp  robot_location.txt
Server_deneme/: Command.py  Control.py  Led.py  PCA9685.py  camera.cpp  main.py  test.py
Server_deneme/Mapping/robot/: CMakeLists.txt  robot_lidar.cpp
clientzeki/Client/: CnnModelTest.py  Command.py  IP.txt  Main.py  ui_client.py
cpp servo codes/: PCA9685.cpp  Servo.cpp
değişenClientDosyalar/: Command.py  Main.py  ui_client.py
(+1 files in other folders)
